# Advanced_Topics_in_Graphics_Ex_4

./: CMakeLists.txt  README.md  build.sh  download_libigl.sh  download_nanoflann.sh  setup.sh
cmake/: FindLIBIGL.cmake  FindTouchExpand.cmake  Findnanoflann.cmake
include/: lib_voxel_grid.h
lib/: Grid3D.h  lib_convolution.cpp  lib_convolution.h  lib_marching_cubes.cpp  lib_marching_cubes.h  marching_cubes_table.h  readASCIIMATRIX.h  readASCIIMATRIX.hpp  readXYZ.h  readXYZ.hpp
src/: Grid3D.cpp  main.cpp
